added contain fiar

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,11 @@
             <i class="fa-solid fa-earth-americas"></i> NamsteChina.org
         </div>
         <ul class="nav-links">
-            <li>Home</li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About Us</a></li>
             <li>Our Partners</li>
+            <li><a href="{{ url_for('canton_fair') }}">Canton Fair</a></li>
+            <li>China Visit</li>
             <li>Contact Us</li>
         </ul>
         <div class="auth-buttons">
