edited canton fair

--- a/templates/cantonfair.html
+++ b/templates/cantonfair.html
@@ -569,7 +569,7 @@
 
                 <!-- Image 3: Electronics / Showcase -->
                 <div class="gallery-item">
-                    <img src="{{ url_for('static', filename='images/Ex6.png') }}" alt="Tech Showcase">
+                    <img src="{{ url_for('static', filename='images/Ex6.jpeg') }}" alt="Tech Showcase">
                     <div class="gallery-overlay">
                         <h4></h4>
                     </div>
