--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
             <li><a href="{{ url_for('about') }}">About Us</a></li>
             <li>Our Partners</li>
             <li><a href="{{ url_for('canton_fair') }}">Canton Fair</a></li>
-            <li>China Visit</li>
+            <li>Membership Plan</li>
+            <li><a href="{{ url_for('membership') }}">Membership Plan</a></li>
             <li>Contact Us</li>
         </ul>
         <div class="auth-buttons">
@@ -87,3 +88,4 @@
     <script src="/static/script.js"></script>
   </body>
 </html>
+
