--- a/templates/membership.html
+++ b/templates/membership.html
@@ -185,12 +185,22 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar">
-        <a href="#" class="logo">
+        <nav class="navbar">
+        <div class="logo">
             <i class="fa-solid fa-earth-americas"></i> NamsteChina.org
-        </a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('about') }}">About Us</a></li>
+            <li>Our Partners</li>
+            <li><a href="{{ url_for('canton_fair') }}">Canton Fair</a></li>
+
+            <li><a href="{{ url_for('membership') }}">Membership Plan</a></li>
+            <li>Contact Us</li>
+        </ul>
         <div class="auth-buttons">
-            <a href="https://drive.google.com/file/d/14t3r1oSDbKU2kECaW-_CSVNBUhQmfRg3/view?usp=sharing" class="btn-primary">Join Now</a>
+            <button class="btn-text">Log In</button>
+            <button class="btn-primary">Join Free</button>
         </div>
     </nav>
 
